Add plain delete command, refactor action message construction